Syncing with 23.2 IF branch

--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -23,8 +23,7 @@
         <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
     <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework
-  object]</value>
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
                 
@@ -60,10 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root"
-    xmlns=""
-    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-    xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -2192,406 +2188,5 @@ Ralentissez pour éviter d'autres violations.</value>
   <data name="GameModeSelection.NoAvailableServer" xml:space="preserve">
     <value>Aucun Serveur Disponible</value>
     <comment>No Available Server</comment>
-  </data>
-  <data name="WarningMessageControl.TapToContinue" xml:space="preserve">
-    <value>Appuyez pour continuer</value>
-  </data>
-  <data name="Settings.General.ClearCache" xml:space="preserve">
-    <value>Vider le cache</value>
-  </data>
-  <data name="Settings.General.NoVoicesFound" xml:space="preserve">
-    <value>Aucune voix trouvée</value>
-  </data>
-  <data name="Settings.Option.FiveSeconds" xml:space="preserve">
-    <value>5 secondes</value>
-  </data>
-  <data name="Settings.Option.Never" xml:space="preserve">
-    <value>Jamais</value>
-  </data>
-  <data name="Settings.Option.TenSeconds" xml:space="preserve">
-    <value>10 secondes</value>
-  </data>
-  <data name="Settings.Option.TwoSeconds" xml:space="preserve">
-    <value>2 secondes</value>
-  </data>
-  <data name="Commands.ElevatorTrimDown" xml:space="preserve">
-    <value>Abaissement de l’ascenseur</value>
-  </data>
-  <data name="Commands.ElevatorTrimUp" xml:space="preserve">
-    <value>Garniture d’ascenseur</value>
-  </data>
-  <data name="Commands.ThrottleDown" xml:space="preserve">
-    <value>Accélérez vers le bas</value>
-  </data>
-  <data name="Commands.ThrottleUp" xml:space="preserve">
-    <value>Accélérez</value>
-  </data>
-  <data name="Error.NetworkErrorShort" xml:space="preserve">
-    <value>Erreur réseau</value>
-  </data>
-  <data name="SystemsStatus.NoAdditionalInformation" xml:space="preserve">
-    <value>Aucune information supplémentaire</value>
-  </data>
-  <data name="SystemsStatus.NoInfo" xml:space="preserve">
-    <value>Pas d’info</value>
-  </data>
-  <data name="SystemStatus.Name" xml:space="preserve">
-    <value>État des systèmes</value>
-  </data>
-  <data name="Global.RestorePurchases" xml:space="preserve">
-    <value>Restaurer les achats</value>
-  </data>
-  <data name="Replay.DeleteAll" xml:space="preserve">
-    <value>Supprimer tout</value>
-  </data>
-  <data name="Replay.DeleteAll.Message" xml:space="preserve">
-    <value>Supprimer tous les fichiers de relecture ?</value>
-  </data>
-  <data name="Replay.DeleteSelected" xml:space="preserve">
-    <value>Supprimer la sélection</value>
-  </data>
-  <data name="Replay.DeleteSelectedPlural.Message" xml:space="preserve">
-    <value>Supprimer {0} fichiers de relecture sélectionnés?</value>
-  </data>
-  <data name="Replay.DeleteSelectedSingular.Message" xml:space="preserve">
-    <value>Supprimer le fichier de relecture sélectionné?</value>
-  </data>
-  <data name="Replay.DeleteUnstarred" xml:space="preserve">
-    <value>Supprimer Unstarred</value>
-  </data>
-  <data name="Replay.DeleteUnstarred.Message" xml:space="preserve">
-    <value>Supprimer les fichiers de relecture sans étoile?</value>
-  </data>
-  <data name="MapItemInfoControl.Class" xml:space="preserve">
-    <value>Classe {0}</value>
-  </data>
-  <data name="MapItemInfoControl.Information" xml:space="preserve">
-    <value>INFORMATION</value>
-  </data>
-  <data name="WeightAndBalance.Unavailable" xml:space="preserve">
-    <value>Indisponible</value>
-  </data>
-  <data name="WeightAndBalance.Unavailable.Message" xml:space="preserve">
-    <value>Activez les freins de stationnement sur la rampe pour modifier le poids et le centrage en mode Live.</value>
-  </data>
-  <data name="SystemMessaging.Jetbridges.NoJetbridgesAvailableAtAirport" xml:space="preserve">
-    <value>Aucun pont à réaction disponible à cet aéroport</value>
-  </data>
-  <data name="Error.AgreementNotSigned" xml:space="preserve">
-    <value>Aucune entente n’a été signée; Vous devez signer l’accord pour effectuer cette action (code d’erreur {0})</value>
-  </data>
-  <data name="Error.AirportNotFound" xml:space="preserve">
-    <value>L’aéroport sélectionné n’est pas disponible (code d’erreur {0})</value>
-  </data>
-  <data name="Error.ExpiredToken" xml:space="preserve">
-    <value>Vous avez été déconnecté et devez vous reconnecter manuellement (code d’erreur {0})</value>
-  </data>
-  <data name="Error.NotSupported" xml:space="preserve">
-    <value>Cette fonctionnalité n’est pas prise en charge (code d’erreur {0})</value>
-  </data>
-  <data name="Error.ServerNotFound" xml:space="preserve">
-    <value>Le serveur sélectionné n’est pas disponible (code d’erreur {0})</value>
-  </data>
-  <data name="Error.UserNotAssigned" xml:space="preserve">
-    <value>Vous n’êtes pas affecté à cet aéroport. Veuillez contacter un réviseur ou un modérateur (code d’erreur {0})</value>
-  </data>
-  <data name="SceneryEditor.NoUploadPermissions" xml:space="preserve">
-    <value>Vous n’avez pas l’autorisation de télécharger des modifications dans cet aéroport.
-
-Veuillez d’abord demander à être attribué via le forum d’édition de décors.</value>
-  </data>
-  <data name="SystemMessaging.Jetbridges.InvalidDockingConditions" xml:space="preserve">
-    <value>Réglez le frein de stationnement et éteignez tous les moteurs pour amarrer les ponts à réaction</value>
-  </data>
-  <data name="SystemMessaging.Jetbridges.NoJetbridgesAvailableNearby" xml:space="preserve">
-    <value>Aucun pont à réaction disponible à proximité</value>
-  </data>
-  <data name="MapItemInfoControl.Contributor" xml:space="preserve">
-    <value>Contributeur</value>
-  </data>
-  <data name="MapItemInfoControl.Contributors" xml:space="preserve">
-    <value>Contributeurs</value>
-  </data>
-  <data name="SystemMessaging.Notams.EnteredTFR" xml:space="preserve">
-    <value>Entré un ISF actif à {0} ou près de celui-ci
-{1}
-Consultez la carte pour plus d’informations</value>
-  </data>
-  <data name="UserAccountControl.Discord" xml:space="preserve">
-    <value>Compte Discord</value>
-  </data>
-  <data name="UserAccountControl.Discord.Linked" xml:space="preserve">
-    <value>Votre compte Discord a été lié et vous avez accès à notre serveur Discord réservé aux Pro</value>
-  </data>
-  <data name="UserAccountControl.Discord.Unlinked" xml:space="preserve">
-    <value>Associez un compte Discord pour obtenir un accès exclusif à notre serveur réservé aux Pro</value>
-  </data>
-  <data name="UserAccountControl.DiscordLinked.Message" xml:space="preserve">
-    <value>Votre compte Discord a été lié. Voulez-vous rejoindre le serveur Infinite Flight Discord maintenant?</value>
-  </data>
-  <data name="UserAccountControl.DiscordLinked.NotNow" xml:space="preserve">
-    <value>Pas maintenant</value>
-  </data>
-  <data name="UserAccountControl.DiscordLinked.Title" xml:space="preserve">
-    <value>Compte lié</value>
-  </data>
-  <data name="UserAccountControl.Discord.NotInstalled.Message" xml:space="preserve">
-    <value>Discord doit être installé depuis l’App Store pour rejoindre le serveur Infinite Flight. Voulez-vous l’installer maintenant?</value>
-  </data>
-  <data name="UserAccountControl.Discord.NotInstalled.Title" xml:space="preserve">
-    <value>Discord non installé</value>
-  </data>
-  <data name="Settings.General.ShowLegacyAircraft.Subtitle" xml:space="preserve">
-    <value>Montrez les avions anciens qui ne reflètent pas les dernières évolutions (cockpits virtuels de haute qualité, instruments, etc...)</value>
-  </data>
-  <data name="Settings.General.ShowLegacyAircraft.Warning" xml:space="preserve">
-    <value>Les avions hérités sont des extras des anciennes versions d’Infinite Flight et ne sont pas de la même qualité. Montrez-leur quand même?</value>
-  </data>
-  <data name="Error.CannotOpenBrowser" xml:space="preserve">
-    <value>Aucun navigateur n’est disponible pour ouvrir ce lien. Assurez-vous qu’un navigateur est installé et contactez le support si le problème persiste (code d’erreur {0})</value>
-  </data>
-  <data name="Error.CouldNotGetFileSize" xml:space="preserve">
-    <value>Impossible de se connecter au serveur, vérifiez votre connexion Internet (code d’erreur {0})</value>
-  </data>
-  <data name="Error.InvalidTimeSpan" xml:space="preserve">
-    <value>Les heures de début et de fin de cette session ne sont pas valides (code d’erreur {0})</value>
-  </data>
-  <data name="FlightFreeControl.ChangeAircraftUpper" xml:space="preserve">
-    <value>CHANGER D'AVION</value>
-    <comment>CHANGE AIRCRAFT</comment>
-  </data>
-  <data name="FlightFreeControl.ImageNotFoundUpper" xml:space="preserve">
-    <value>IMAGE NON TROUVÉE</value>
-    <comment>IMAGE NOT FOUND</comment>
-  </data>
-  <data name="FlightFreeControl.NewFlightUpper" xml:space="preserve">
-    <value>NOUVEAU VOL</value>
-    <comment>NEW FLIGHT</comment>
-  </data>
-  <data name="FlightFreeControl.UnavailableUpper" xml:space="preserve">
-    <value>INDISPONIBLE</value>
-    <comment>UNAVAILABLE</comment>
-  </data>
-  <data name="FlightFreeControl.WeatherUpper" xml:space="preserve">
-    <value>MÉTÉO</value>
-    <comment>WEATHER</comment>
-  </data>
-  <data name="FlightMenu.AltimeterUpper" xml:space="preserve">
-    <value>ALTIMÈTRE</value>
-    <comment>ALTIMETER</comment>
-  </data>
-  <data name="FlightMenu.ApproxDurationUpper" xml:space="preserve">
-    <value>DURÉE APPROX.</value>
-    <comment>APPROX. DURATION</comment>
-  </data>
-  <data name="FlightMenu.CloudsUpper" xml:space="preserve">
-    <value>NUAGES</value>
-    <comment>CLOUDS</comment>
-  </data>
-  <data name="FlightMenu.DistanceUpper" xml:space="preserve">
-    <value>DISTANCE</value>
-    <comment>DISTANCE</comment>
-  </data>
-  <data name="FlightMenu.FlightSchoolDescription" xml:space="preserve">
-    <value>Maîtrisez vos compétences de pilotage avec des tutoriels interactifs</value>
-    <comment>Master your piloting skills with interactive tutorials</comment>
-  </data>
-  <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
-    <value>ÉCOLE DE PILOTAGE</value>
-    <comment>FLIGHT SCHOOL</comment>
-  </data>
-  <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
-    <value>Choisissez votre avion et votre aéroport, personnalisez votre plan de vol et profitez d'une expérience de vol immersive à votre rythme</value>
-    <comment>Choose your aircraft and airport, customize your flight plan, and enjoy an immersive flying experience at your own pace</comment>
-  </data>
-  <data name="FlightMenu.FreeFlightUpper" xml:space="preserve">
-    <value>VOL LIBRE</value>
-    <comment>FREE FLIGHT</comment>
-  </data>
-  <data name="FlightMenu.GenericFlightUpper" xml:space="preserve">
-    <value>VOL GÉNÉRIQUE</value>
-    <comment>GENERIC FLIGHT</comment>
-  </data>
-  <data name="FlightMenu.LatestMetarUpper" xml:space="preserve">
-    <value>DERNIER METAR</value>
-    <comment>LATEST METAR</comment>
-  </data>
-  <data name="FlightMenu.MissionsDescription" xml:space="preserve">
-    <value>Plongez directement dans l'action avec des routes recommandées de compagnies aériennes et charters basées sur le trafic et l'ATC</value>
-    <comment>Jump right into the action with recommended airline and charter routes based on traffic and ATC</comment>
-  </data>
-  <data name="FlightMenu.MissionsUpper" xml:space="preserve">
-    <value>MISSIONS</value>
-    <comment>MISSIONS</comment>
-  </data>
-  <data name="FlightMenu.ParkingUpper" xml:space="preserve">
-    <value>PARKING</value>
-    <comment>PARKING</comment>
-  </data>
-  <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
-    <value>TEMPÉRATURE</value>
-    <comment>TEMPERATURE</comment>
-  </data>
-  <data name="FlightMenu.TimeUpper" xml:space="preserve">
-    <value>HEURE</value>
-    <comment>TIME</comment>
-  </data>
-  <data name="FlightMenu.TypeUpper" xml:space="preserve">
-    <value>TYPE</value>
-    <comment>TYPE</comment>
-  </data>
-  <data name="FlightMenu.VisibilityUpper" xml:space="preserve">
-    <value>VISIBILITÉ</value>
-    <comment>VISIBILITY</comment>
-  </data>
-  <data name="FlightMenu.Wind" xml:space="preserve">
-    <value>{0:#000}° à {1} noeuds</value>
-    <comment>{0:#000}° at {1} kts</comment>
-  </data>
-  <data name="FlightMenu.WindCalm" xml:space="preserve">
-    <value>Vent calme</value>
-    <comment>Calm wind</comment>
-  </data>
-  <data name="FlightMenu.WindUpper" xml:space="preserve">
-    <value>VENT</value>
-    <comment>WIND</comment>
-  </data>
-  <data name="FlightMenu.WindWithGust" xml:space="preserve">
-    <value>{0:#000}° à {1} - {2} kts</value>
-  </data>
-  <data name="FlightMenu.WorldUpper" xml:space="preserve">
-    <value>MONDE</value>
-  </data>
-  <data name="FlightMissionControl.LongHaulUpper" xml:space="preserve">
-    <value>LONG COURRIER</value>
-  </data>
-  <data name="FlightMissionControl.MediumHaulUpper" xml:space="preserve">
-    <value>COURRIER MOYEN</value>
-  </data>
-  <data name="FlightMissionControl.NoMissionsFoundUpper" xml:space="preserve">
-    <value>AUCUNE MISSION TROUVÉE</value>
-  </data>
-  <data name="FlightMissionControl.ShortHaulUpper" xml:space="preserve">
-    <value>COURT COURRIER</value>
-  </data>
-  <data name="FlightMissionControl.UltraLongHaulUpper" xml:space="preserve">
-    <value>ULTRA LONG COURRIER</value>
-  </data>
-  <data name="FlightSchoolControl.AircraftUpper" xml:space="preserve">
-    <value>AVION</value>
-  </data>
-  <data name="FlightSchoolControl.NoEntrySelected" xml:space="preserve">
-    <value>AUCUNE ENTRÉE SÉLECTIONNÉE</value>
-  </data>
-  <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
-    <value>AUCUNE LEÇON TROUVÉE</value>
-  </data>
-  <data name="Global.NotApplicable" xml:space="preserve">
-    <value>N/A</value>
-  </data>
-  <data name="LogbookControl.AircraftUpper" xml:space="preserve">
-    <value>AVION</value>
-  </data>
-  <data name="LogbookControl.AllUpper" xml:space="preserve">
-    <value>TOUS</value>
-  </data>
-  <data name="LogbookControl.AtcUpper" xml:space="preserve">
-    <value>ATC</value>
-  </data>
-  <data name="LogbookControl.DistanceUpper" xml:space="preserve">
-    <value>DISTANCE</value>
-  </data>
-  <data name="LogbookControl.DurationUpper" xml:space="preserve">
-    <value>DURÉE</value>
-  </data>
-  <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
-    <value>Erreur lors de l'exportation du fichier de relecture. Vérifiez que vous disposez d'assez d'espace de stockage</value>
-  </data>
-  <data name="LogbookControl.ExportingUpper" xml:space="preserve">
-    <value>EXPORTATION</value>
-  </data>
-  <data name="LogbookControl.FileSizeUpper" xml:space="preserve">
-    <value>TAILLE DU FICHIER</value>
-  </data>
-  <data name="LogbookControl.MultiplayerUpper" xml:space="preserve">
-    <value>MULTIJOUEUR</value>
-  </data>
-  <data name="LogbookControl.NoEntrySelected" xml:space="preserve">
-    <value>AUCUNE ENTRÉE SÉLECTIONNÉE</value>
-  </data>
-  <data name="LogbookControl.NoItemsFound" xml:space="preserve">
-    <value>AUCUN ÉLÉMENT TROUVÉ</value>
-  </data>
-  <data name="LogbookControl.OnlyReplaysUpper" xml:space="preserve">
-    <value>REPLAYS SEULEMENT</value>
-  </data>
-  <data name="LogbookControl.ServerUpper" xml:space="preserve">
-    <value>SERVEUR</value>
-  </data>
-  <data name="LogbookControl.SoloUpper" xml:space="preserve">
-    <value>SOLO</value>
-  </data>
-  <data name="LogbookControl.XpEarnedUpper" xml:space="preserve">
-    <value>XP GAGNÉ</value>
-  </data>
-  <data name="LogbookControl.YourLogbook" xml:space="preserve">
-    <value>VOTRE CARNET DE VOL</value>
-  </data>
-  <data name="LoginSubscriptionPage.Pricing12Months" xml:space="preserve">
-    <value>{0} / 12 mois</value>
-  </data>
-  <data name="LoginSubscriptionPage.Pricing6Months" xml:space="preserve">
-    <value>{0} / 6 mois</value>
-  </data>
-  <data name="MainMenuPage.AirTrafficControlUpper" xml:space="preserve">
-    <value>CONTRÔLE DU TRAFIC AÉRIEN</value>
-  </data>
-  <data name="MainMenuPage.ControlButtonUpper" xml:space="preserve">
-    <value>CONTRÔLER</value>
-  </data>
-  <data name="MainMenuPage.FlightUpper" xml:space="preserve">
-    <value>VOL</value>
-  </data>
-  <data name="MainMenuPage.FlyButtonUpper" xml:space="preserve">
-    <value>VOLER</value>
-  </data>
-  <data name="MainMenuPage.OpenButtonUpper" xml:space="preserve">
-    <value>OUVRIR</value>
-  </data>
-  <data name="MainMenuPage.ReplayButtonUpper" xml:space="preserve">
-    <value>REJOUER</value>
-  </data>
-  <data name="MainMenuPage.UnableToPlayReplay" xml:space="preserve">
-    <value>Impossible de lire le fichier de relecture</value>
-  </data>
-  <data name="MenuAtcControl.ChangeAirportUpper" xml:space="preserve">
-    <value>CHANGER D'AÉROPORT</value>
-  </data>
-  <data name="MenuAtcControl.Duration" xml:space="preserve">
-    <value>Durée</value>
-  </data>
-  <data name="MenuAtcControl.Frequencies" xml:space="preserve">
-    <value>Fréquences</value>
-  </data>
-  <data name="MenuAtcControl.MultipleFrequencies" xml:space="preserve">
-    <value>Fréquences multiples</value>
-  </data>
-  <data name="MenuAtcControl.NewAtcSessionUpper" xml:space="preserve">
-    <value>NOUVELLE SESSION ATC</value>
-  </data>
-  <data name="MenuAtcControl.NoSessionsFoundUpper" xml:space="preserve">
-    <value>AUCUNE SESSION TROUVÉE</value>
-  </data>
-  <data name="MenuAtcControl.ResumeAtcSessionQuestion" xml:space="preserve">
-    <value>Reprendre la session ATC?</value>
-  </data>
-  <data name="MenuAtcControl.UnableToRestartUserNotSame" xml:space="preserve">
-    <value>Impossible de redémarrer car cette session n'est pas liée à votre compte</value>
-  </data>
-  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
-    <value>Afficher les avions des versions précédentes</value>
-  </data>
-  <data name="World.SoloDescription" xml:space="preserve">
-    <value>Choisissez votre propre avion et itinéraire, testez vos compétences de pilotage et explorez de beaux paysages sans règles ni autres pilotes.</value>
   </data>
 </root>
