--- a/Strings/AppResources.bg.resx
+++ b/Strings/AppResources.bg.resx
@@ -466,7 +466,7 @@
     <comment>Automatically couple the ailerons and rudder (on the ground only)</comment>
   </data>
   <data name="Settings.General.AutoCoordination.Title" xml:space="preserve">
-    <value>Авто-Координация</value>
+    <value>Авто-координация</value>
     <comment>Auto-Coordination</comment>
   </data>
   <data name="Settings.General.AutomaticEngineStart.Subtitle" xml:space="preserve">
@@ -482,7 +482,7 @@
     <comment>Enter low power during long flights to save battery</comment>
   </data>
   <data name="Settings.General.AutomaticLowPower.Title" xml:space="preserve">
-    <value>Автоматичнo включване на Режим на Ниска Мощност</value>
+    <value>Автоматичнo включване на режима на ниска мощност</value>
     <comment>Enable Automatic Low Power</comment>
   </data>
   <data name="Settings.General.ClearSceneryCache.Subtitle" xml:space="preserve">
@@ -542,7 +542,7 @@
     <comment>Useful when recording videos/tutorials</comment>
   </data>
   <data name="Settings.General.ShowTouches.Title" xml:space="preserve">
-    <value>Показване на Докосванията</value>
+    <value>Показване на докосванията</value>
     <comment>Show Touches</comment>
   </data>
   <data name="Settings.General.WeightUnits.Subtitle" xml:space="preserve">
@@ -550,7 +550,7 @@
     <comment>Select weight units (Kg or Lbs)</comment>
   </data>
   <data name="Settings.General.WeightUnits.Title" xml:space="preserve">
-    <value>Мерни Единици за Тегло</value>
+    <value>Мерни единици за тегло</value>
     <comment>Weight Units</comment>
   </data>
   <data name="Settings.Graphics.AntiAliasing.Subtitle" xml:space="preserve">
@@ -978,7 +978,7 @@
     <comment>Move Axis on Device to Assign</comment>
   </data>
   <data name="Settings.Controls.RestoreDefaults" xml:space="preserve">
-    <value>Връщане на састройки по подразбиране</value>
+    <value>Връщане на настройки по подразбиране</value>
     <comment>Restore Defaults</comment>
   </data>
   <data name="Settings.Controls.SetupGuide" xml:space="preserve">
@@ -986,7 +986,7 @@
     <comment>Setup Guide</comment>
   </data>
   <data name="Settings.Controls.ShowDevices" xml:space="preserve">
-    <value>Показване на сстройства</value>
+    <value>Показване на устройства</value>
     <comment>Show Devices</comment>
   </data>
   <data name="Settings.Controls.ShowDevices.DeviceSingular" xml:space="preserve">
@@ -1010,7 +1010,7 @@
     <comment>Use Network Joystick</comment>
   </data>
   <data name="Settings.Sounds.ATC" xml:space="preserve">
-    <value>Сила на Звука на РВД</value>
+    <value>Сила на звука на РВД</value>
     <comment>ATC Volume</comment>
   </data>
   <data name="Settings.Sounds.SFX" xml:space="preserve">
@@ -2350,7 +2350,7 @@
     <comment>Reduce speed below {0}kts below 10000ft to avoid violations</comment>
   </data>
   <data name="SystemMessaging.OverspeedViolation.ReduceSpeedBelowMach" xml:space="preserve">
-    <value>Намалете скоростта под Мах {0:0.00}, за да избегнете нарушения</value>
+    <value>Намалете скоростта под мах {0:0.00}, за да избегнете нарушения</value>
     <comment>Reduce speed below Mach {speed} to avoid violations</comment>
   </data>
   <data name="SystemMessaging.OverspeedViolation.WarningTitle" xml:space="preserve">
@@ -2687,7 +2687,7 @@ Check map for more information</comment>
       <value>МИСИИ</value>
   </data>
   <data name="FlightMenu.ParkingUpper" xml:space="preserve">
-      <value>ПАРКИНГ</value>
+      <value>СТОЯНКА</value>
   </data>
   <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
       <value>ТЕМПЕРАТУРА</value>
