--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -122,8 +122,7 @@
     <comment>ACCESS TO OUR ENTIRE FLEET</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselText1" xml:space="preserve">
-    <value>数十架飞机、
-几百种涂装、
+    <value>几十种不同的机型、数百个不同的涂装、
 逼真的气动模型和可动驾驶舱</value>
     <comment>Dozens of aircraft, hundreds of liveries, realistic flight models, and animated cockpits</comment>
   </data>
@@ -132,9 +131,7 @@
     <comment>DISCOVER THE WORLD</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselText2" xml:space="preserve">
-    <value>全球超过20,000个机场、
-400 多个 3D 机场并且数量在持续增加、
-15m级分辨率卫星地形图像等。</value>
+    <value>全球超过20,000个机场；上千个3D机场，并且数量在持续增加；15m级分辨率卫星地形图像；真正的开放世界游戏</value>
     <comment>Over 20,000 airports worldwide, 90+ 3D airports and counting, 15m/px satelite terrain imagery, and more.</comment>
   </data>
   <data name="LoginSubscriptionPage.ProCarouselText3" xml:space="preserve">
@@ -578,11 +575,7 @@
     <comment>Frame rate limit</comment>
   </data>
   <data name="Settings.Graphics.FrameRateLimitWarning" xml:space="preserve">
-    <value>将帧率设置为 60fps 可能会导致你的设备过热。
-为防止损坏，
-你的设备可能会自动降低性能，
-这会导致 Infinite Flight 运行缓慢。
-我们建议将此设置保持为 30fps。</value>
+    <value>将帧率设置为 60fps 可能会导致你的设备过热。为防止损坏，你的设备可能会自动降低性能，这会导致 Infinite Flight 运行缓慢。我们建议将此设置保持为 30fps。</value>
     <comment>Setting Frame Rate to 60fps can cause your device to overheat. To prevent damage, your device may slow down which can cause Infinite Flight to run slowly.\nWe recommend keeping this setting to 30fps.</comment>
   </data>
   <data name="Settings.Graphics.FullScreen.Subtitle" xml:space="preserve">
@@ -1790,7 +1783,7 @@
     <comment>Settings</comment>
   </data>
   <data name="MenuPageBase.AircraftTooLarge" xml:space="preserve">
-    <value>{0} 飞机过大，无法停靠在位于 {2} 的 {1} 机位。 请更换停机位。</value>
+    <value>{0}飞机过大，无法停靠在位于{2}的{1}机位。请更换停机位。</value>
     <comment>The {aircraft} is too large for current starting point {start location name} at {airport name}.\n\nPlease change the start location.</comment>
   </data>
   <data name="MenuPageBase.ATC" xml:space="preserve">
@@ -1802,7 +1795,7 @@
     <comment>CAN'T CONNECT</comment>
   </data>
   <data name="MenuPageBase.CannotConnect.Message" xml:space="preserve">
-    <value>Infinite Flight 遭遇连接问题。请检查互联网连接并重启应用或稍后再试。 </value>
+    <value>Infinite Flight遭遇连接问题。请检查互联网连接并重启应用或稍后再试。 </value>
     <comment>Infinite Flight is experiencing internet connectivity issues. Please check your internet connection and restart the app or try again later.</comment>
   </data>
   <data name="MenuPageBase.ForumNotConnected" xml:space="preserve">
@@ -2579,11 +2572,8 @@
     <comment>You are not assigned to this airport</comment>
   </data>
   <data name="SceneryEditor.NoUploadPermissions" xml:space="preserve">
-    <value>你没有编辑该机场的权限。
-
-请前往论坛请求分配至该机场</value>
+    <value>你没有编辑该机场的权限。请前往Discord服务器请求分配至该机场。</value>
     <comment>You do not have permission to upload changes to this airport.
-
 Please ask to be assigned via the Scenery Editing forum first</comment>
   </data>
   <data name="SystemMessaging.Jetbridges.InvalidDockingConditions" xml:space="preserve">
@@ -2676,8 +2666,7 @@ Check map for more information</comment>
     <comment>Home</comment>
   </data>
   <data name="Error.CannotOpenBrowser" xml:space="preserve">
-    <value>无法打开链接。请确认已经安装了一个浏览器。
-若问题持续出现，请联系技术支持 (error code {0})</value>
+    <value>无法打开链接。请确认已经安装了一个浏览器。若问题持续出现，请联系技术支持 (error code {0})</value>
     <comment>No browser is available to open this link - ensure you have a browser installed. Contact support if the issue persists (error code {0})</comment>
   </data>
   <data name="Error.CouldNotGetFileSize" xml:space="preserve">
@@ -2814,8 +2803,7 @@ Check map for more information</comment>
       <value>时长</value>
   </data>
   <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
-      <value>导出回放文件时出错。
-请检查您是否有足够的存储空间</value>
+      <value>导出回放文件时出错。请检查您是否有足够的存储空间。</value>
   </data>
   <data name="LogbookControl.ExportingUpper" xml:space="preserve">
       <value>导出中</value>
@@ -2903,8 +2891,7 @@ Check map for more information</comment>
       <value>显示来自旧版本的飞机</value>
   </data>
   <data name="World.SoloDescription" xml:space="preserve">
-      <value>自由选择飞机和航线，在没有规则和其他飞机的环境中
-磨练您的飞行技术，探索美丽的风景。
+      <value>自由选择飞机和航线，在没有规则和其他飞机的环境中磨练您的飞行技术，探索美丽的风景。
 </value>
   </data>
     <data name="DefaultMission.AfterLanding" xml:space="preserve">
