Changed existing account -> more options

--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -266,7 +266,7 @@
     <comment>Sign in to use a subscription bought on another device</comment>
   </data>
   <data name="LoginSubscriptionPage.ExistingAccount" xml:space="preserve">
-    <value>I already have an account</value>
+    <value>More Options</value>
     <comment>I already have an account</comment>
   </data>
   <data name="LoginSubscriptionPage.MoreInfo" xml:space="preserve">
